SFDCProject/src/objects/Partner_Modes__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Modes</relationshipLabel>
        <relationshipName>Partner_Modes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <label>Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ModeId_AccountId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ModeId_AccountId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mode_Id__c</fullName>
        <label>Mode Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode_Name__c</fullName>
        <label>Mode Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Partner Modes</label>
    <nameField>
        <label>Partner Modes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Modes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>